Fix chatbot input bottom spacing

--- a/public/index.scss
+++ b/public/index.scss
@@ -9,7 +9,7 @@
   position: relative;
   width: 200px;
 
-  &.in-legacy-header{
+  &.in-legacy-header {
     margin: 0 $euiSizeS;
     height: $euiSizeL * 2;
   }
@@ -20,17 +20,17 @@
     }
   }
 
-  .llm-chat-header-text-input{
+  .llm-chat-header-text-input {
     padding-left: $euiSizeXL;
     padding-right: $euiSizeL * 2;
   }
 
-  .llm-chat-toggle-icon{
+  .llm-chat-toggle-icon {
     position: absolute;
     left: $euiSizeS;
   }
 
-  .llm-chat-header-shortcut{
+  .llm-chat-header-shortcut {
     position: absolute;
     right: $euiSizeS;
   }
@@ -74,7 +74,7 @@
 }
 
 .llm-chat-flyout-footer {
-  padding-bottom: 24px;
+  padding-bottom: 40px;
 }
 
 .llm-chat-bubble-wrapper {
